1.1.1 (trunk):
* Man page fixes for typos and terminology (#220).
* Activate backtrace recording by default (#225).

1.1.0 (2014-02-05):
* Add a combinator interface to device binding that makes the functor generation
  significantly more succinct and expressive.  This breaks backwards compatibility
  with `config.ml` files from the 1.0.x branches.
* Integrate the `mirage-types` code into `types`.  This is built as a separate
  library from the command-line tool, via the `install-types` Makefile target.

1.0.4 (2014-01-14):
* Add default build tags for annot, bin_annot, principal and strict_sequence.
* Renane `KV_RO` to `Crunch`

1.0.3 (2013-12-18):
* Do not remove OPAM packages when doing `mirage clean` (#143)
* [xen] generate a simple main.xl, without block devices or network interfaces.
* The HTTP dependency now also installs `mirage-tcp-*` and `mirage-http-*`.
* Fix generated Makefile dependency on source OCaml files to rebuild reliably.
* Support `Fat_KV_RO` (a read-only k/v version of the FAT filesystem).
* The Unix `KV_RO` now passes through to the underlying filesystem instead of calling `crunch`, via `mirage-fs-unix`.

1.0.2 (2013-12-10):
* Add `HTTP` support.
* Fix `KV_RO` configuration for OPAM autoinstall.

1.0.1 (2013-12-09)
* Add more examples to the FAT filesystem test case.
* Fix `mirage-tcpip-*` support
* Fix `mirage-net-*` support

1.0.0 (2013-12-09):
* Adapt the latest library releases for Mirage 1.0 interfaces.

0.10.0 (2013-12.08):
* Complete API rewrite
* [xen] XL configuration phase is now created during configure phase, was during run phase.

0.9.7 (2013-08-09):
* Generate code that uses the `Ipaddr.V4` interface instead of `Nettypes`.

0.9.6 (2013-07-26):
* fix unix-direct by linking the unix package correctly (previously it was always dropped).

0.9.5 (2013-07-18):
* completely remove the dependency on obuild: use ocamlbuild everywhere now.
* adapt for mirage-0.9.3 OS.Netif interfaces (abstract type `id`).